--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,30 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e7ee8">  <td>25/07/06 13:26:03</td>   <td>0</td> <td title="&gt;&gt;RegressionTest.beforeSuite()[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="9e7ee8">  <td>25/07/06 18:21:46</td>   <td>0</td> <td title="&gt;&gt;SmokeTest.beforeSuite()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:26:03</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="73f5bc">  <td>25/07/06 18:21:46</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:26:03</td>   <td>225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
+<tr bgcolor="73f5bc">  <td>25/07/06 18:21:47</td>   <td>308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:26:33</td>   <td>30526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
+<tr bgcolor="73f5bc">  <td>25/07/06 18:22:05</td>   <td>18447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:27:03</td>   <td>60679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
+<tr bgcolor="73f5bc">  <td>25/07/06 18:22:19</td>   <td>32780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:27:36</td>   <td>93464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
+<tr bgcolor="73f5bc">  <td>25/07/06 18:22:59</td>   <td>72306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:27:49</td>   <td>105977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
-  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:28:15</td>   <td>131949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
-  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:28:33</td>   <td>149994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
-  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:28:51</td>   <td>167907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
-  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:29:09</td>   <td>185826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">runScenario</td> 
-  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 13:29:51</td>   <td>228743</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="73f5bc">  <td>25/07/06 18:23:18</td>   <td>91629</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>25/07/06 13:29:53</td>   <td>229938</td> <td title="&lt;&lt;RegressionTest.afterSuite()[pri:0, instance:com.micro.runners.RegressionTest@294425a7]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="9e7ee8">  <td>25/07/06 18:23:19</td>   <td>93122</td> <td title="&lt;&lt;SmokeTest.afterSuite()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
 </table>
