--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e7ee8">  <td>25/07/06 18:21:46</td>   <td>0</td> <td title="&gt;&gt;SmokeTest.beforeSuite()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="bf786e">  <td>25/07/07 05:50:15</td>   <td>0</td> <td title="&gt;&gt;RegressionTest.beforeSuite()[pri:0, instance:com.micro.runners.RegressionTest@79924b]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 18:21:46</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="c19091">  <td>25/07/07 05:50:15</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.micro.runners.RegressionTest@79924b]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 18:21:47</td>   <td>308</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
+<tr bgcolor="c19091">  <td>25/07/07 05:50:15</td>   <td>310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 18:22:05</td>   <td>18447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
+<tr bgcolor="c19091">  <td>25/07/07 05:50:45</td>   <td>30287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 18:22:19</td>   <td>32780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
+<tr bgcolor="c19091">  <td>25/07/07 05:51:09</td>   <td>53517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 18:22:59</td>   <td>72306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">runScenario</td> 
+<tr bgcolor="c19091">  <td>25/07/07 05:51:35</td>   <td>80309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="73f5bc">  <td>25/07/06 18:23:18</td>   <td>91629</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="c19091">  <td>25/07/07 05:51:49</td>   <td>93855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>25/07/07 05:52:11</td>   <td>116277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>25/07/07 05:52:27</td>   <td>131599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>25/07/07 05:52:45</td>   <td>149817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>25/07/07 05:53:02</td>   <td>167025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.micro.runners.RegressionTest@79924b]">runScenario</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="c19091">  <td>25/07/07 05:53:46</td>   <td>210597</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.micro.runners.RegressionTest@79924b]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="9e7ee8">  <td>25/07/06 18:23:19</td>   <td>93122</td> <td title="&lt;&lt;SmokeTest.afterSuite()[pri:0, instance:com.micro.runners.SmokeTest@294425a7]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="bf786e">  <td>25/07/07 05:53:47</td>   <td>212289</td> <td title="&lt;&lt;RegressionTest.afterSuite()[pri:0, instance:com.micro.runners.RegressionTest@79924b]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
 </table>
